# trading_simulator

./: .env.example  .gitignore  HowToUseIt.md  README.md  WIKI.md  WIKI_FR.md  app.py  candlestick_charts.py  download_market_data.py  download_news.py  interface-2.0.py  interface_trader.py  main.py  pyproject.toml  regenerate_charts.py  requirements.txt  setup.py
Data/: generated_data.csv  interface-logs.csv
Data/export/: interface-logs.csv  portfolio-logs.csv  request-logs.csv
Scraping/: company_scraping.py  scrapping.py
Setup/: download_market_data.py  download_news.py  scraping_with_bs4.py
data/: CAC40.csv  generated_data.csv  generated_data_backup.csv  interface-logs.csv  market_data.csv  news.csv  news_en.csv  news_fr.csv  pattern_configs.json  revenue.csv  select_patterns.py  verification_report.csv
data/exports/: README.md
data/legacy/: market_data.csv
data/patterns/: quality_scores.json
emotrade/: README.md  __init__.py  app.py  defaults.py
emotrade/Components/: candlestick_charts.py  graph.py  home.py  news.py  portfolio.py  requests.py
emotrade/Layouts/: dashboard.py  home.py  layout.py
emotrade/Locales/: __init__.py  en.py  fr.py
emotrade/Scraping/: company_scraping.py  convert_date.py  scrapping.py
emotrade/Setup/: __init__.py  download_market_data.py  scraping_news.py
emotrade/pages/: home.py  (+1 more)
legacy/: README.md  main.py  setup.py
trade/: app.py  candlestick_charts.py  defaults.py
tradesim/: __init__.py  app.py  defaults.py
trading_simulator/: README.md  __init__.py  __main__.py  app.py
tradingsimulator/: README.md  app.py
(+743 files in other folders)
