[project]
name = "trading_simulator"
version = "0.0.dev1"
authors = [
    { name="Kevin EL HADDAD", email="kevin.elhaddad@umons.ac.be" },
    { name="Capucine FOUILLARD", email="capucine.fouillard@student.junia.com" },
    { name="Paul HERBEAU", email="paul.herbeau01@gmail.com" },
    { name="Gatien VILAIN", email="gatien.vilain@outlook.fr" },
]
description = "A trading website interface to collect trader actions"
keywords = ["Trading", "Interface", "Actions"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kelhad00/trading_simulator"
"Bug Tracker" = "https://github.com/kelhad00/trading_simulator/issues"